Fix favourites-alignment with shopping cart changes, and add android to package.json

--- a/qrder-customer/src/app/menutab/tab1.page.scss
+++ b/qrder-customer/src/app/menutab/tab1.page.scss
@@ -12,6 +12,10 @@
   width: 100px;
 }
 
+.badge {
+  font-size: 13px;
+}
+
 #favItem {
   font-size: 18px;
 }
